--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
 </head>
 
 <body>
-
-  <img src="img/gdrive-sheet" />
-    <a href="https://docs.google.com/spreadsheets/d/1Or6lTPGiZJIGcJFH1MqO4OiMLD1de0Eq8Tn9UyDkSa0/">
-      GravesLab Contact List
-    </a>
   
-  <img src="img/gdrive-doc" />
-    <a href="https://docs.google.com/document/d/1YZhZ0SSBKSBMMw_Il96y2_oVSuVCwmMCvpqHEN1S9YY/">
-      GravesLab Procurement Guide
-    </a>
+  <div>
+    <img src="img/gdrive-sheet.png" />
+      <a href="https://docs.google.com/spreadsheets/d/1Or6lTPGiZJIGcJFH1MqO4OiMLD1de0Eq8Tn9UyDkSa0/">
+        GravesLab Contact List
+      </a>
+  </div>
+
+  <div>
+    <img src="img/gdrive-doc.png" />
+      <a href="https://docs.google.com/document/d/1YZhZ0SSBKSBMMw_Il96y2_oVSuVCwmMCvpqHEN1S9YY/">
+        GravesLab Procurement Guide
+      </a>
+  </div>
+
   
 </body>
 </html>
