--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <style>
     img {display: inline-block;}
     a {font-weight: bold;}
+    body {font-family: Verdana, sans-serif;}
   </style>
 </head>
 
