--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 
   <style>
     img {display: inline-block;}
-    a {font-weight: bold;}
+    a {font-weight: normal;}
     body {font-family: Verdana, sans-serif;}
+    h1 {front-size: 2.0em;}
   </style>
 </head>
 
 <body>
+
+  <h1>
+    Key Documents
+  </h1>
   
   <div>
     <img src="img/gdrive-sheet.png" />
