--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     img {display: inline-block;}
     a {font-weight: normal;}
     body {font-family: Verdana, sans-serif;}
-    h1 {front-size: 2.0em;}
+    h1 {font-size: 2.0em;}
   </style>
 </head>
 
