--- a/index.html
+++ b/index.html
@@ -8,27 +8,42 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
 
   <style>
+    div.gdrive {
+      background-color:f5f5f5;
+      border-style:solid; 
+      border-width:1px;
+      border-color:dddddd;
+      width:300px;
+      margin:5px 5px 5px 5px;
+      padding:2px 2px 2px 2px;
+      font-size: 0.9em;
+    }
     img {display: inline-block;}
     a {font-weight: normal;}
     body {font-family: Verdana, sans-serif;}
     h1 {font-size: 2.0em;}
+    h2 {font-size: 1.2em;}
   </style>
 </head>
 
 <body>
 
   <h1>
-    Key Documents
+    GravesLab Core Index
   </h1>
+
+  <h2>
+    Key Documents
+  </h2>
   
-  <div>
+  <div class="gdrive">
     <img src="img/gdrive-sheet.png" />
       <a href="https://docs.google.com/spreadsheets/d/1Or6lTPGiZJIGcJFH1MqO4OiMLD1de0Eq8Tn9UyDkSa0/">
         GravesLab Contact List
       </a>
   </div>
 
-  <div>
+  <div class="gdrive">
     <img src="img/gdrive-doc.png" />
       <a href="https://docs.google.com/document/d/1YZhZ0SSBKSBMMw_Il96y2_oVSuVCwmMCvpqHEN1S9YY/">
         GravesLab Procurement Guide
