--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     }
     img {display: inline-block;}
     a {font-weight: normal;}
-    body {font-family: Verdana, sans-serif;}
-    h1 {font-size: 2.0em;}
-    h2 {font-size: 1.2em;}
+    body {font-family: Arial, Helvetica, sans-serif;}
+    h1 {font-size: 2.0em; font-family: Verdana, sans-serif;}
+    h2 {font-size: 1.2em; font-family: Verdana, sans-serif;}
   </style>
 </head>
 
