--- a/index.html
+++ b/index.html
@@ -14,13 +14,25 @@
       border-width:1px;
       border-color:dddddd;
       width:300px;
-      margin:5px 5px 5px 5px;
-      padding:2px 2px 2px 2px;
+      margin:10px 10px 10px 10px;
+      padding:5px 5px 5px 5px;
       font-size: 0.9em;
+      
     }
-    img {display: inline-block;}
-    a {font-weight: normal;}
-    body {font-family: Verdana, sans-serif;}
+
+    img.gdrive-icon {
+      display: inline-block;
+      vertical-align: text-top;
+    }
+
+    div.gdrive a {
+      font-weight: bold;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+    }
+    
     h1 {font-size: 2.0em;}
     h2 {font-size: 1.2em;}
   </style>
@@ -37,14 +49,14 @@
   </h2>
   
   <div class="gdrive">
-    <img src="img/gdrive-sheet.png" />
+    <img class="gdrive-icon" src="img/gdrive-sheet.png" />
       <a href="https://docs.google.com/spreadsheets/d/1Or6lTPGiZJIGcJFH1MqO4OiMLD1de0Eq8Tn9UyDkSa0/">
         GravesLab Contact List
       </a>
   </div>
 
   <div class="gdrive">
-    <img src="img/gdrive-doc.png" />
+    <img class="gdrive-icon" src="img/gdrive-doc.png" />
       <a href="https://docs.google.com/document/d/1YZhZ0SSBKSBMMw_Il96y2_oVSuVCwmMCvpqHEN1S9YY/">
         GravesLab Procurement Guide
       </a>
