cleaned up css selectors

--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <head>
   <title>GravesLab Core</title>
   <link href='img/favicon.ico' rel='icon' type='image/x-icon'/>
-
   <script src="js/list.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
 </head>
 
 <body>
-
   <h1>
     GravesLab Core Index
   </h1>
@@ -21,19 +18,19 @@
   </h2>
   
   <div class="gdrive">
-    <img class="gdrive-icon" src="img/gdrive-sheet.png" />
+    <img src="img/gdrive-sheet.png" />
       <a href="https://docs.google.com/spreadsheets/d/1Or6lTPGiZJIGcJFH1MqO4OiMLD1de0Eq8Tn9UyDkSa0/">
         GravesLab Contact List
       </a>
   </div>
 
   <div class="gdrive">
-    <img class="gdrive-icon" src="img/gdrive-doc.png" />
+    <img src="img/gdrive-doc.png" />
       <a href="https://docs.google.com/document/d/1YZhZ0SSBKSBMMw_Il96y2_oVSuVCwmMCvpqHEN1S9YY/">
         GravesLab Procurement Guide
       </a>
   </div>
 
-  
+
 </body>
 </html>
