added graveslab site

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <h2>
     Key Documents
   </h2>
+
+  <div class="gdrive">
+    <img src="img/website.png" />
+      <a href="http://www.graveslab.org/">
+        GravesLab Website
+      </a>
+  </div>
   
   <div class="gdrive">
     <img src="img/gdrive-sheet.png" />
