added GravesLab wiki

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         GravesLab Website
       </a>
   </div>
+
+  <div class="gdrive">
+    <img src="img/website.png" />
+      <a href="http://wiki.graveslab.org/">
+        GravesLab Wiki
+      </a>
+  </div>
   
   <div class="gdrive">
     <img src="img/gdrive-sheet.png" />
