added additional links

--- a/index.html
+++ b/index.html
@@ -30,11 +30,25 @@
         GravesLab Wiki
       </a>
   </div>
-  
+
+  <div class="gdrive">
+    <img src="img/website.png" />
+      <a href="https://www.mendeley.com/community/c1d2242e-abd2-3157-ae87-e0e21c3e8b8f/">
+        GravesLab on Mendeley
+      </a>
+  </div>
+
   <div class="gdrive">
     <img src="img/gdrive-sheet.png" />
       <a href="https://docs.google.com/spreadsheets/d/1Or6lTPGiZJIGcJFH1MqO4OiMLD1de0Eq8Tn9UyDkSa0/">
         GravesLab Contact List
+      </a>
+  </div>
+
+  <div class="gdrive">
+    <img src="img/gdrive-sheet.png" />
+      <a href="https://docs.google.com/spreadsheets/d/1NM28eCHaDsgQBudAvuIeTzP1vLWhhQzte02QVMiD_Y4/">
+        GravesLab Inventories - Computers, Equipment, &etc
       </a>
   </div>
 
